# pusu

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/tests/: api.rs
crates/compile/: Cargo.toml
crates/compile/examples/: live_compile.rs
crates/compile/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: alert.rs  condition.rs  kline.rs  lib.rs  market.rs
crates/engine/: Cargo.toml
crates/engine/examples/: live_watch.rs
crates/engine/src/: lib.rs  outcome.rs  snapshot.rs  watcher.rs
crates/feed/: Cargo.toml
crates/feed/examples/: live_check.rs
crates/feed/src/: http.rs  kline.rs  lib.rs  mark.rs  orders.rs  source.rs  tracker.rs
crates/nl/: Cargo.toml
crates/nl/examples/: compile_sentence.rs
crates/nl/src/: lex.rs  lib.rs  parse.rs
crates/nl/tests/: parse.rs  pipeline.rs
crates/node/: Cargo.toml
crates/node/examples/: live_execute.rs
crates/node/src/: dispatch.rs  health.rs  lib.rs  main.rs  notify.rs  reconcile.rs  runner.rs
crates/node/tests/: node.rs
crates/sign/: Cargo.toml
crates/sign/src/: lib.rs  offchain.rs
crates/spike/: Cargo.toml
crates/spike/src/: main.rs
crates/store/: Cargo.toml
crates/store/migrations/: 0001_initial.sql  0002_encrypt_blobs.sql  0003_cancel_requested.sql  0004_notifications.sql
crates/store/src/: crypto.rs  lib.rs  record.rs
crates/store/tests/: roundtrip.rs
crates/web/: Cargo.toml  index.html  style.css
crates/web/src/: account.rs  alert.rs  api.rs  app.rs  bulk.rs  chart.rs  config.rs  feed.rs  main.rs  onboarding.rs  wallet.rs
docs/: PLAN.md
pusu-landing/: index.html  risk.html  terms.html
