[workspace]
resolver = "2"
members = ["crates/compile", "crates/core", "crates/engine", "crates/feed", "crates/spike"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Muhammet Eren Karakuş <erenkar950@gmail.com>"]
repository = "https://github.com/eren-karakus0/pusu"

[workspace.dependencies]
bulk-client = "0.1.2"
bulk-keychain = "0.1.19"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "query"] }
solana-pubkey = "3"
solana-keypair = "3"
solana-signer = "3"
bs58 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros"] }
