[package]
name = "pusu-compile"
version = "0.1.0"
description = "Alarmı BULK payload'ına derler — ve hangi katmanın yürüteceğine karar verir"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pusu-core = { path = "../core" }
bulk-keychain.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[[example]]
name = "live_compile"
