[package]
name = "pusu-node"
version = "0.1.0"
description = "Besteci: store + feed + engine'i gerçek BULK'a bağlayan çalışan düğüm"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pusu-core = { path = "../core" }
pusu-feed = { path = "../feed" }
pusu-engine = { path = "../engine" }
pusu-store = { path = "../store" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
# health/ready/metrics HTTP sunucusu ("watcher'ı kim izliyor").
axum.workspace = true

[dev-dependencies]
sqlx = { workspace = true }
# live_execute örneği için: raw imza (cüzdan yok) ile tam zincir kanıtı.
pusu-sign = { path = "../sign" }
solana-keypair.workspace = true
solana-signer.workspace = true
bs58.workspace = true
