[package]
name = "spike"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bulk-client.workspace = true
bulk-keychain.workspace = true
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
solana-pubkey.workspace = true
solana-keypair.workspace = true
solana-signer.workspace = true
bs58.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
